--- a/banano-sports-pools/templates/cwc/cwc_payouts.html
+++ b/banano-sports-pools/templates/cwc/cwc_payouts.html
@@ -101,7 +101,7 @@
                                 <label class="col-form-label" for="season_inp">Season:</label>
                                 <div style="clear: both;"></div>
                                 <select id="season_inp">
-                                    <option value="2023" selected>2023</option>
+                                    <option value="2023" selected>2023/24</option>
                                 </select>
                             </div>
                             <div class="d-flex flex-column">
