--- a/banano-sports-pools/templates/cwc/cwc_pools.html
+++ b/banano-sports-pools/templates/cwc/cwc_pools.html
@@ -21,7 +21,7 @@
 
     <script src="../../../static/js/tip.js"></script>
     <script src="../../../static/js/pools.js"></script>
-    <script src="../../../static/js/rwc/rwc_pools.js"></script>
+    <script src="../../../static/js/cwc/cwc_pools.js"></script>
 
 </head>
 
@@ -53,16 +53,16 @@
                     <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/sports/html/rwc/rwc_pools">RWC Pools</a>
+                    <a class="nav-link" href="/sports/html/cwc/cwc_pools">CWC Pools</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/sports/html/rwc/rwc_history">RWC History</a>
+                    <a class="nav-link" href="/sports/html/cwc/cwc_history">CWC History</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/sports/html/rwc/rwc_payouts">RWC Payouts</a>
+                    <a class="nav-link" href="/sports/html/cwc/cwc_payouts">CWC Payouts</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/sports/html/rwc/rwc_leaderboards">RWC Stats</a>
+                    <a class="nav-link" href="/sports/html/cwc/cwc_leaderboards">CWC Stats</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/roadmap">Roadmap</a>
@@ -73,7 +73,7 @@
     <div class="container-fluid jumbotron">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h1>Banano Sports Pools - Rugby World Cup</h1>
+                <h1>Banano Sports Pools - Cricket World Cup</h1>
             </div>
         </div>
         <div class="row">
@@ -120,7 +120,7 @@
             </div>
             <div class="col-md-2 my-auto">
                 <div style="zoom: 1.1;">
-                    <label class="col-form-label" for="week_inp">RWC Round:</label>
+                    <label class="col-form-label" for="week_inp">CWC Round:</label>
                     <div style="clear: both;"></div>
                     <select id="week_inp">
                         <option value="group" selected>Group</option>
@@ -136,12 +136,6 @@
             <div class="col-md-4 my-auto">
                 <button type="button" class="btn btn-secondary" id="changeBanAddress">Change BAN Address</button>
                 <button type="button" class="btn btn-primary" onClick="window.location.reload();">Refresh Page</button>
-            </div>
-        </div>
-        <br>
-        <div class="row">
-            <div class="col-md-12">
-                <p>Disclaimer: Win Probabilities for the Rugby World Cup are not provided by the data vendor used by these pools. All fixtures are defaulted to +100, 1/1, 2.000, 50% odds.</p>
             </div>
         </div>
     </div>
@@ -312,7 +306,7 @@
                             <div class="col-md-12" id="deposit_confirmation">
                                 <h2>Here is your confirmed deposit, you may now close this pop-up. Feel free to screenshot this receipt for proof.</h2>
                                 <h3> Your deposit should now also be seen on the
-                                    <a href="/sports/html/rwc/rwc_history" , target="_blank">History</a> page. Refresh this page to see the updated pool.</h3>
+                                    <a href="/sports/html/cwc/cwc_history" , target="_blank">History</a> page. Refresh this page to see the updated pool.</h3>
                                 <br>
                             </div>
                         </div>
@@ -328,7 +322,7 @@
     <div class="container-fluid" id="progress_container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3>Grabbing RWC Games and Pool Data...</h3>
+                <h3>Grabbing CWC Games and Pool Data...</h3>
             </div>
         </div>
         <div class="row">
