--- a/banano-sports-pools/templates/roadmap.html
+++ b/banano-sports-pools/templates/roadmap.html
@@ -75,6 +75,13 @@
                 <div class="col-md-12">
                     <h1>Release Notes</h1>
                     <hr style="color:lightgray; border-width: 3px;">
+                    <h4>10/06/2023, v2.3</h4>
+                    <ul>
+                        <li>Added Cricket World Cup</li>
+                        <li>Added MLB Playoffs</li>
+                    </ul>
+                </div>
+                <div class="col-md-12">
                     <h4>09/24/2023, v2.2</h4>
                     <ul>
                         <li>Added game status for when scores are refreshed during the match</li>
