--- a/banano-sports-pools/templates/cwc/cwc_history.html
+++ b/banano-sports-pools/templates/cwc/cwc_history.html
@@ -32,8 +32,8 @@
     <script src="https://cdn.jsdelivr.net/gh/davidshimjs/qrcodejs/qrcode.min.js"></script>
 
     <script src="../../../static/js/tip.js"></script>
-    <script src="../../../static/js/payouts.js"></script>
-    <script src="../../../static/js/rwc/rwc_payouts.js"></script>
+    <script src="../../../static/js/history.js"></script>
+    <script src="../../../static/js/rwc/rwc_history.js"></script>
 
 </head>
 
@@ -67,10 +67,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/sports/html/rwc/rwc_pools">RWC Pools</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="/sports/html/rwc/rwc_history">RWC History</a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="/sports/html/rwc/rwc_payouts">RWC Payouts</a>
                 </li>
                 <li class="nav-item">
@@ -86,8 +86,8 @@
         <div class="container-fluid jumbotron">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <h1>Deposit Payouts</h1>
-                    <p>If you have verified your BAN address, your payouts should be highlighted below.</p>
+                    <h1>Deposit History</h1>
+                    <p>If you have verified your BAN address, your historical deposits should be highlighted below.</p>
                 </div>
             </div>
         </div>
@@ -101,7 +101,7 @@
                                 <label class="col-form-label" for="season_inp">Season:</label>
                                 <div style="clear: both;"></div>
                                 <select id="season_inp">
-                                    <option value="2023" selected>2023</option>
+                                    <option value="2023" selected>2023/24</option>
                                 </select>
                             </div>
                             <div class="d-flex flex-column">
@@ -118,7 +118,7 @@
                             </div>
                             <div class="d-flex flex-column">
                                 <label class="col-form-label" for="max_ban">Max. BAN</label>
-                                <input type="number" id="max_ban" name="max_ban" min="0" value="2000" step="10">
+                                <input type="number" id="max_ban" name="max_ban" min="0" value="1000" step="10">
                             </div>
                         </div>
 
@@ -137,18 +137,15 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12 table-responsive">
-                <table id="payouts_table" class="table table-hover table-bordered table-striped text-center">
+                <table id="sql_table" class="table table-hover table-bordered table-striped text-center">
                     <thead>
                         <tr>
                             <th>Match Round</th>
                             <th>Game ID</th>
+                            <th>Chosen Team</th>
                             <th>Ban Address</th>
-                            <th>Total Deposits</th>
-                            <th>Winning Pool</th>
-                            <th>Percent of Pool</th>
-                            <th>Losing Pool</th>
-                            <th>Amount Won</th>
-                            <th>Payout</th>
+                            <th>Deposit Amount</th>
+                            <th>Date</th>
                             <th>Block</th>
                         </tr>
                     </thead>
