--- a/banano-sports-pools/templates/mlb/mlb_history.html
+++ b/banano-sports-pools/templates/mlb/mlb_history.html
@@ -32,8 +32,8 @@
     <script src="https://cdn.jsdelivr.net/gh/davidshimjs/qrcodejs/qrcode.min.js"></script>
 
     <script src="../../../static/js/tip.js"></script>
-    <script src="../../../static/js/payouts.js"></script>
-    <script src="../../../static/js/rwc/rwc_payouts.js"></script>
+    <script src="../../../static/js/history.js"></script>
+    <script src="../../../static/js/mlb/mlb_history.js"></script>
 
 </head>
 
@@ -65,16 +65,16 @@
                     <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/sports/html/rwc/rwc_pools">RWC Pools</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/sports/html/rwc/rwc_history">RWC History</a>
+                    <a class="nav-link" href="/sports/html/mlb/mlb_pools">MLB Pools</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/sports/html/rwc/rwc_payouts">RWC Payouts</a>
+                    <a class="nav-link" href="/sports/html/mlb/mlb_history">MLB History</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/sports/html/rwc/rwc_leaderboards">RWC Stats</a>
+                    <a class="nav-link" href="/sports/html/mlb/mlb_payouts">MLB Payouts</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/sports/html/mlb/mlb_leaderboards">MLB Stats</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/roadmap">Roadmap</a>
@@ -86,8 +86,8 @@
         <div class="container-fluid jumbotron">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <h1>Deposit Payouts</h1>
-                    <p>If you have verified your BAN address, your payouts should be highlighted below.</p>
+                    <h1>Deposit History</h1>
+                    <p>If you have verified your BAN address, your historical deposits should be highlighted below.</p>
                 </div>
             </div>
         </div>
@@ -107,8 +107,11 @@
                             <div class="d-flex flex-column">
                                 <label class="col-form-label" for="week_inp">Match Round</label>
                                 <select id="week_inp">
-                                <option value="group" selected>Group</option>
-                            </select>
+                                    <option value="Wildcard" selected>Wildcard</option>
+                                    <option value="Division Series">Division Series</option>
+                                    <option value="Championship Series">Championship Series</option>
+                                    <option value="World Series">World Series</option>
+                                </select>
                             </div>
                         </div>
                         <div class="col-md-6">
@@ -118,7 +121,7 @@
                             </div>
                             <div class="d-flex flex-column">
                                 <label class="col-form-label" for="max_ban">Max. BAN</label>
-                                <input type="number" id="max_ban" name="max_ban" min="0" value="2000" step="10">
+                                <input type="number" id="max_ban" name="max_ban" min="0" value="1000" step="10">
                             </div>
                         </div>
 
@@ -137,18 +140,15 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12 table-responsive">
-                <table id="payouts_table" class="table table-hover table-bordered table-striped text-center">
+                <table id="sql_table" class="table table-hover table-bordered table-striped text-center">
                     <thead>
                         <tr>
                             <th>Match Round</th>
                             <th>Game ID</th>
+                            <th>Chosen Team</th>
                             <th>Ban Address</th>
-                            <th>Total Deposits</th>
-                            <th>Winning Pool</th>
-                            <th>Percent of Pool</th>
-                            <th>Losing Pool</th>
-                            <th>Amount Won</th>
-                            <th>Payout</th>
+                            <th>Deposit Amount</th>
+                            <th>Date</th>
                             <th>Block</th>
                         </tr>
                     </thead>
