--- a/banano-sports-pools/templates/rwc/rwc_leaderboards.html
+++ b/banano-sports-pools/templates/rwc/rwc_leaderboards.html
@@ -102,7 +102,7 @@
                                 <label class="col-form-label" for="season_inp">Season:</label>
                                 <div style="clear: both;"></div>
                                 <select id="season_inp">
-                                    <option value="2023" selected>2023/24</option>
+                                    <option value="2023" selected>2023</option>
                                 </select>
                             </div>
                             <div class="d-flex flex-column">
