--- a/banano-sports-pools/templates/welcome.html
+++ b/banano-sports-pools/templates/welcome.html
@@ -66,7 +66,7 @@
         <div class="container-fluid jumbotron">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <h1>Welcome to the Banano Sports Pools! (v2.2)</h1>
+                    <h1>Welcome to the Banano Sports Pools! (v2.3)</h1>
                     <h3>Why not get started by selecting an available sport?</h3>
                     <br>
                 </div>
@@ -100,16 +100,16 @@
                         <img src="/static/assets/rugby_world_cup.png" style="width: 100%; height:400px;"></a>
                 </div>
                 <div class="col-md-4 d-flex text-center align-items-center justify-content-center">
-                    <a href="#">
+                    <a href="/sports/html/cwc/cwc_pools">
                         <h3>Cricket World Cup</h3>
-                        <img src="/static/assets/work_inprogress.png" style="width: 100%; height:400px;"></a>
+                        <img src="/static/assets/cricket.png" style="width: 100%; height:400px;"></a>
                 </div>
             </div>
             <div class="row form-group">
                 <div class="col-md-4 d-flex text-center align-items-center justify-content-center">
-                    <a href="#">
+                    <a href="/sports/html/mlb/mlb_pools">
                         <h3>MLB Playoffs</h3>
-                        <img src="/static/assets/work_inprogress.png" style="width: 100%; height:400px;"></a>
+                        <img src="/static/assets/baseball.png" style="width: 100%; height:400px;"></a>
                 </div>
             </div>
         </div>
