--- a/banano-sports-pools/templates/cwc/cwc_payouts.html
+++ b/banano-sports-pools/templates/cwc/cwc_payouts.html
@@ -33,7 +33,7 @@
 
     <script src="../../../static/js/tip.js"></script>
     <script src="../../../static/js/payouts.js"></script>
-    <script src="../../../static/js/rwc/rwc_payouts.js"></script>
+    <script src="../../../static/js/cwc/cwc_payouts.js"></script>
 
 </head>
 
@@ -65,16 +65,16 @@
                     <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/sports/html/rwc/rwc_pools">RWC Pools</a>
+                    <a class="nav-link" href="/sports/html/cwc/cwc_pools">CWC Pools</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/sports/html/rwc/rwc_history">RWC History</a>
+                    <a class="nav-link" href="/sports/html/cwc/cwc_history">CWC History</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/sports/html/rwc/rwc_payouts">RWC Payouts</a>
+                    <a class="nav-link" href="/sports/html/cwc/cwc_payouts">CWC Payouts</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/sports/html/rwc/rwc_leaderboards">RWC Stats</a>
+                    <a class="nav-link" href="/sports/html/cwc/cwc_leaderboards">CWC Stats</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/roadmap">Roadmap</a>
