--- a/banano-sports-pools/templates/cwc/cwc_history.html
+++ b/banano-sports-pools/templates/cwc/cwc_history.html
@@ -33,7 +33,7 @@
 
     <script src="../../../static/js/tip.js"></script>
     <script src="../../../static/js/history.js"></script>
-    <script src="../../../static/js/rwc/rwc_history.js"></script>
+    <script src="../../../static/js/cwc/cwc_history.js"></script>
 
 </head>
 
@@ -65,16 +65,16 @@
                     <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/sports/html/rwc/rwc_pools">RWC Pools</a>
+                    <a class="nav-link" href="/sports/html/cwc/cwc_pools">CWC Pools</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/sports/html/rwc/rwc_history">RWC History</a>
+                    <a class="nav-link" href="/sports/html/cwc/cwc_history">CWC History</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/sports/html/rwc/rwc_payouts">RWC Payouts</a>
+                    <a class="nav-link" href="/sports/html/cwc/cwc_payouts">CWC Payouts</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/sports/html/rwc/rwc_leaderboards">RWC Stats</a>
+                    <a class="nav-link" href="/sports/html/cwc/cwc_leaderboards">CWC Stats</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/roadmap">Roadmap</a>
@@ -101,7 +101,7 @@
                                 <label class="col-form-label" for="season_inp">Season:</label>
                                 <div style="clear: both;"></div>
                                 <select id="season_inp">
-                                    <option value="2023" selected>2023/24</option>
+                                    <option value="2023" selected>2023</option>
                                 </select>
                             </div>
                             <div class="d-flex flex-column">
