--- a/banano-sports-pools/templates/cwc/cwc_leaderboards.html
+++ b/banano-sports-pools/templates/cwc/cwc_leaderboards.html
@@ -34,7 +34,7 @@
 
     <script src="../../../static/js/tip.js"></script>
     <script src="../../../static/js/leaderboards.js"></script>
-    <script src="../../../static/js/rwc/rwc_leaderboards.js"></script>
+    <script src="../../../static/js/cwc/cwc_leaderboards.js"></script>
 
 </head>
 
@@ -66,16 +66,16 @@
                     <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/sports/html/rwc/rwc_pools">RWC Pools</a>
+                    <a class="nav-link" href="/sports/html/cwc/cwc_pools">CWC Pools</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/sports/html/rwc/rwc_history">RWC History</a>
+                    <a class="nav-link" href="/sports/html/cwc/cwc_history">CWC History</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/sports/html/rwc/rwc_payouts">RWC Payouts</a>
+                    <a class="nav-link" href="/sports/html/cwc/cwc_payouts">CWC Payouts</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/sports/html/rwc/rwc_leaderboards">RWC Stats</a>
+                    <a class="nav-link" href="/sports/html/cwc/cwc_leaderboards">CWC Stats</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/roadmap">Roadmap</a>
@@ -87,7 +87,7 @@
         <div class="container-fluid jumbotron">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <h1>RWC Pool Stats</h1>
+                    <h1>CWC Pool Stats</h1>
                     <p>If you have verified your BAN address, your stats should be highlighted below.</p>
                 </div>
             </div>
@@ -102,7 +102,7 @@
                                 <label class="col-form-label" for="season_inp">Season:</label>
                                 <div style="clear: both;"></div>
                                 <select id="season_inp">
-                                    <option value="2023" selected>2023/24</option>
+                                    <option value="2023" selected>2023</option>
                                 </select>
                             </div>
                             <div class="d-flex flex-column">
