--- a/banano-sports-pools/templates/welcome.html
+++ b/banano-sports-pools/templates/welcome.html
@@ -57,6 +57,12 @@
                     <a class="nav-link" href="/sports/html/rwc/rwc_pools">RWC Pools</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/sports/html/cwc/cwc_pools">CWC Pools</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/sports/html/mlb/mlb_pools">MLB Pools</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/roadmap">Roadmap</a>
                 </li>
             </ul>
