--- a/banano-sports-pools/templates/rwc/rwc_history.html
+++ b/banano-sports-pools/templates/rwc/rwc_history.html
@@ -108,6 +108,7 @@
                                 <label class="col-form-label" for="week_inp">Match Round</label>
                                 <select id="week_inp">
                                 <option value="group" selected>Group</option>
+                                <option value="knockout">Knockout</option>
                             </select>
                             </div>
                         </div>
