--- a/banano-sports-pools/templates/rwc/rwc_leaderboards.html
+++ b/banano-sports-pools/templates/rwc/rwc_leaderboards.html
@@ -108,8 +108,9 @@
                             <div class="d-flex flex-column">
                                 <label class="col-form-label" for="week_inp">Match Round</label>
                                 <select id="week_inp">
-                                    <option value="'group'">All</option>
+                                    <option value="'group','knockout'">All</option>
                                     <option value="'group'" selected>Group</option>
+                                    <option value="'knockout'">Knockout</option>
                               </select>
                             </div>
                         </div>
