--- a/banano-sports-pools/templates/cwc/cwc_pools.html
+++ b/banano-sports-pools/templates/cwc/cwc_pools.html
@@ -127,13 +127,25 @@
                     </select>
                 </div>
             </div>
+            <div class="col-md-1 my-auto">
+                <div style="zoom: 1.1;">
+                    <label class="col-form-label" for="status_inp">Status:</label>
+                    <div style="clear: both;"></div>
+                    <select id="status_inp">
+                        <option value="All" selected>All</option>
+                        <option value="Scheduled" >Scheduled</option>
+                        <option value="Live" >Live</option>
+                        <option value="Final" >Final</option>
+                    </select>
+                </div>
+            </div>
             <div class="col-md-2 my-auto">
                 <div class="form-check" style="zoom: 1.3;">
                     <input class="form-check-input" type="checkbox" value="" id="rec_games">
                     <label class="form-check-label" for="rec_games"> Recommend Teams/Games?</label>
                 </div>
             </div>
-            <div class="col-md-4 my-auto">
+            <div class="col-md-3 my-auto">
                 <button type="button" class="btn btn-secondary" id="changeBanAddress">Change BAN Address</button>
                 <button type="button" class="btn btn-primary" onClick="window.location.reload();">Refresh Page</button>
             </div>
