--- a/banano-sports-pools/templates/rwc/rwc_pools.html
+++ b/banano-sports-pools/templates/rwc/rwc_pools.html
@@ -124,6 +124,19 @@
                     <div style="clear: both;"></div>
                     <select id="week_inp">
                         <option value="group" selected>Group</option>
+                        <option value="knockout">Knockout</option>
+                    </select>
+                </div>
+            </div>
+            <div class="col-md-1 my-auto">
+                <div style="zoom: 1.1;">
+                    <label class="col-form-label" for="status_inp">Status:</label>
+                    <div style="clear: both;"></div>
+                    <select id="status_inp">
+                        <option value="All" selected>All</option>
+                        <option value="Scheduled" >Scheduled</option>
+                        <option value="Live" >Live</option>
+                        <option value="Final" >Final</option>
                     </select>
                 </div>
             </div>
@@ -133,7 +146,7 @@
                     <label class="form-check-label" for="rec_games"> Recommend Teams/Games?</label>
                 </div>
             </div>
-            <div class="col-md-4 my-auto">
+            <div class="col-md-3 my-auto">
                 <button type="button" class="btn btn-secondary" id="changeBanAddress">Change BAN Address</button>
                 <button type="button" class="btn btn-primary" onClick="window.location.reload();">Refresh Page</button>
             </div>
