--- a/banano-sports-pools/templates/nba/nba_pools.html
+++ b/banano-sports-pools/templates/nba/nba_pools.html
@@ -124,6 +124,7 @@
                     <div style="clear: both;"></div>
                     <select id="week_inp">
                         <option value="Standard" selected>Play-In</option>
+                        <option value="Round of 16">Round 1</option>
                     </select>
                 </div>
             </div>
