--- a/banano-sports-pools/templates/nba/nba_history.html
+++ b/banano-sports-pools/templates/nba/nba_history.html
@@ -108,6 +108,7 @@
                                 <label class="col-form-label" for="week_inp">Match Round</label>
                                 <select id="week_inp">
                                     <option value="Standard" selected>Play-In</option>
+                                    <option value="Round of 16">Round 1</option>
                                 </select>
                             </div>
                         </div>
