--- a/banano-sports-pools/templates/nba/nba_leaderboards.html
+++ b/banano-sports-pools/templates/nba/nba_leaderboards.html
@@ -108,8 +108,9 @@
                             <div class="d-flex flex-column">
                                 <label class="col-form-label" for="week_inp">Match Round</label>
                                 <select id="week_inp">
-                                    <option value="'Standard'">All</option>
+                                    <option value="'Standard','Round of 16'">All</option>
                                     <option value="'Standard'" selected>Play-In</option>
+                                    <option value="'Round of 16'">Round 1</option>
                               </select>
                             </div>
                         </div>
