--- a/banano-sports-pools/templates/roadmap.html
+++ b/banano-sports-pools/templates/roadmap.html
@@ -75,6 +75,13 @@
                 <div class="col-md-12">
                     <h1>Release Notes</h1>
                     <hr style="color:lightgray; border-width: 3px;">
+                    <h4>04/16/2024, v2.5</h4>
+                    <ul>
+                        <li>Added NBA Playoffs</li>
+                        <li>NHL Playoffs Skeleton</li>
+                    </ul>
+                </div>
+                <div class="col-md-12">
                     <h4>10/14/2023, v2.4</h4>
                     <ul>
                         <li>Added Status Filter</li>
