--- a/banano-sports-pools/templates/welcome.html
+++ b/banano-sports-pools/templates/welcome.html
@@ -53,9 +53,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/sports/html/nba/nba_pools">NBA Pools</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="/sports/html/nhl/nhl_pools">NHL Pools</a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                     <a class="nav-link" href="/roadmap">Roadmap</a>
                 </li>
@@ -66,7 +66,7 @@
         <div class="container-fluid jumbotron">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <h1>Welcome to the Banano Sports Pools! (v2.3)</h1>
+                    <h1>Welcome to the Banano Sports Pools! (v2.5)</h1>
                     <h3>Why not get started by selecting an available sport?</h3>
                     <br>
                 </div>
@@ -95,9 +95,14 @@
                         <img src="/static/assets/basketball.png" style="width: 100%; height:400px;"></a>
                 </div>
                 <div class="col-md-4 d-flex text-center align-items-center justify-content-center">
-                    <a href="/sports/html/nhl/nhl_pools">
+                    <a href="/">
                         <h3>NHL Playoffs (April 2024)</h3>
-                        <img src="/static/assets/hockey.png" style="width: 100%; height:400px;"></a>
+                        <img src="/static/assets/locked.png" style="width: 100%; height:400px;"></a>
+                </div>
+                <div class="col-md-4 d-flex text-center align-items-center justify-content-center">
+                    <a href="/">
+                        <h3>UEFA Euro 2024 (June 2024)</h3>
+                        <img src="/static/assets/locked.png" style="width: 100%; height:400px;"></a>
                 </div>
             </div>
             <div class="row form-group">
@@ -173,7 +178,6 @@
                                     <li>PAYMENTS ARE NOW AUTOMATIC and will go out hourly on the 15. Shout-out to the <a href="https://github.com/jetstream0/bananopie", href="_target">BananoPie</a> library for helping make this lift possible.</li>
                                     <li>Game results are also now automated! Every hour, all game outcomes should be updated automatically (e.g. final scores, schedule changes, etc)</li>
                                     <li>When you navigate to the Pools page, the current week will be selected by default, automatically!</li>
-                                    <li>I refactored the history for the NFL pools from 2022, and made NFL Season a filter on all pages.</li>
                                     <li>I added a couple of visualization to the stats/leaderboard pages. #DataViz</li>
                                     <li>FiveThirtyEight has been removed as a data provider after they froze their sports coverage.</li>
                                 </ol>
