--- a/banano-sports-pools/templates/roadmap.html
+++ b/banano-sports-pools/templates/roadmap.html
@@ -51,10 +51,10 @@
                     <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/sports/html/nfl/nfl_pools">NFL Pools</a>
+                    <a class="nav-link" href="/sports/html/nba/nba_pools">NBA Pools</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/sports/html/rwc/rwc_pools">RWC Pools</a>
+                    <a class="nav-link" href="/sports/html/nhl/nhl_pools">NHL Pools</a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="/roadmap">Roadmap</a>
@@ -75,6 +75,13 @@
                 <div class="col-md-12">
                     <h1>Release Notes</h1>
                     <hr style="color:lightgray; border-width: 3px;">
+                    <h4>04/20/2024, v2.6</h4>
+                    <ul>
+                        <li>Added NHL Playoffs</li>
+                        <li>Added Team Filter</li>
+                    </ul>
+                </div>
+                <div class="col-md-12">
                     <h4>04/16/2024, v2.5</h4>
                     <ul>
                         <li>Added NBA Playoffs</li>
