--- a/banano-sports-pools/templates/nba/nba_leaderboards.html
+++ b/banano-sports-pools/templates/nba/nba_leaderboards.html
@@ -110,7 +110,7 @@
                                 <select id="week_inp">
                                     <option value="'Standard','Round of 16'">All</option>
                                     <option value="'Standard'" selected>Play-In</option>
-                                    <option value="'Round of 16'">Round 1</option>
+                                    <option value="'Round of 16'">Round of 16</option>
                               </select>
                             </div>
                         </div>
