--- a/banano-sports-pools/templates/nba/nba_payouts.html
+++ b/banano-sports-pools/templates/nba/nba_payouts.html
@@ -1,4 +1,4 @@
-mlb<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -108,7 +108,7 @@ mlb<!DOCTYPE html>
                                 <label class="col-form-label" for="week_inp">Match Round</label>
                                 <select id="week_inp">
                                     <option value="Standard" selected>Play-In</option>
-                                    <option value="Round of 16">Round 1</option>
+                                    <option value="Round of 16">Round of 16</option>
                                 </select>
                             </div>
                         </div>
