--- a/banano-sports-pools/templates/welcome.html
+++ b/banano-sports-pools/templates/welcome.html
@@ -53,9 +53,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/sports/html/nba/nba_pools">NBA Pools</a>
                 </li>
-                <!-- <li class="nav-item">
+                <li class="nav-item">
                     <a class="nav-link" href="/sports/html/nhl/nhl_pools">NHL Pools</a>
-                </li> -->
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/roadmap">Roadmap</a>
                 </li>
@@ -95,9 +95,9 @@
                         <img src="/static/assets/basketball.png" style="width: 100%; height:400px;"></a>
                 </div>
                 <div class="col-md-4 d-flex text-center align-items-center justify-content-center">
-                    <a href="/">
+                    <a href="/sports/html/nhl/nhl_pools">
                         <h3>NHL Playoffs (April 2024)</h3>
-                        <img src="/static/assets/locked.png" style="width: 100%; height:400px;"></a>
+                        <img src="/static/assets/hockey.png" style="width: 100%; height:400px;"></a>
                 </div>
                 <div class="col-md-4 d-flex text-center align-items-center justify-content-center">
                     <a href="/">
