--- a/banano-sports-pools/templates/nba/nba_leaderboards.html
+++ b/banano-sports-pools/templates/nba/nba_leaderboards.html
@@ -109,8 +109,8 @@
                                 <label class="col-form-label" for="week_inp">Match Round</label>
                                 <select id="week_inp">
                                     <option value="'Standard','Round of 16'">All</option>
-                                    <option value="'Standard'" selected>Play-In</option>
-                                    <option value="'Round of 16'">Round of 16</option>
+                                    <option value="'Standard'">Play-In</option>
+                                    <option value="'Round of 16'" selected>Round of 16</option>
                               </select>
                             </div>
                         </div>
