--- a/banano-sports-pools/templates/nhl/nhl_history.html
+++ b/banano-sports-pools/templates/nhl/nhl_history.html
@@ -107,7 +107,7 @@
                             <div class="d-flex flex-column">
                                 <label class="col-form-label" for="week_inp">Match Round</label>
                                 <select id="week_inp">
-                                    <option value="Standard" selected>Play-In</option>
+                                    <option value="Round of 16" selected>Round of 16</option>
                                 </select>
                             </div>
                         </div>
