--- a/banano-sports-pools/templates/nhl/nhl_leaderboards.html
+++ b/banano-sports-pools/templates/nhl/nhl_leaderboards.html
@@ -108,8 +108,8 @@
                             <div class="d-flex flex-column">
                                 <label class="col-form-label" for="week_inp">Match Round</label>
                                 <select id="week_inp">
-                                    <option value="'Standard'">All</option>
-                                    <option value="'Standard'" selected>Play-In</option>
+                                    <option value="'Round of 16'">All</option>
+                                    <option value="'Round of 16'" selected>Round of 16</option>
                               </select>
                             </div>
                         </div>
