--- a/banano-sports-pools/templates/nfl/nfl_leaderboards.html
+++ b/banano-sports-pools/templates/nfl/nfl_leaderboards.html
@@ -103,7 +103,8 @@
                                 <div style="clear: both;"></div>
                                 <select id="season_inp">
                                     <option value="2022">2022/23</option>
-                                    <option value="2023" selected>2023/24</option>
+                                    <option value="2023">2023/24</option>
+                                    <option value="2024" selected>2024/25</option>
                                 </select>
                             </div>
                             <div class="d-flex flex-column">
