--- a/banano-sports-pools/templates/welcome.html
+++ b/banano-sports-pools/templates/welcome.html
@@ -51,10 +51,7 @@
                     <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/sports/html/nba/nba_pools">NBA Pools</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/sports/html/nhl/nhl_pools">NHL Pools</a>
+                    <a class="nav-link" href="/sports/html/nfl/nfl_pools">NFL Pools</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/roadmap">Roadmap</a>
@@ -90,30 +87,25 @@
             <hr style="color:lightgray; border-width: 3px;">
             <div class="row form-group">
                 <div class="col-md-4 d-flex text-center align-items-center justify-content-center">
-                    <a href="/sports/html/nba/nba_pools">
-                        <h3>NBA Playoffs (April 2024)</h3>
-                        <img src="/static/assets/basketball.png" style="width: 100%; height:400px;"></a>
+                    <a href="/sports/html/nfl/nfl_pools">
+                        <h3>NFL (September 2024)</h3>
+                        <img src="/static/assets/american-football.png" style="width: 100%; height:400px;"></a>
                 </div>
-                <div class="col-md-4 d-flex text-center align-items-center justify-content-center">
-                    <a href="/sports/html/nhl/nhl_pools">
-                        <h3>NHL Playoffs (April 2024)</h3>
-                        <img src="/static/assets/hockey.png" style="width: 100%; height:400px;"></a>
-                </div>
-                <div class="col-md-4 d-flex text-center align-items-center justify-content-center">
-                    <a href="/">
-                        <h3>UEFA Euro 2024 (June 2024)</h3>
+                <div class="col-md-4 d-flex text-center align-items-center justify-content-center"></div>
+                    <a href="#">
+                        <h3>Premier League (September 2024)</h3>
                         <img src="/static/assets/locked.png" style="width: 100%; height:400px;"></a>
                 </div>
             </div>
             <div class="row form-group">
                 <div class="col-md-4 d-flex text-center align-items-center justify-content-center">
-                    <a href="/sports/html/cwc/cwc_pools">
-                        <h3>Cricket T20 World Cup (June 2024)</h3>
+                    <a href="/sports/html/nhl/nhl_pools">
+                        <h3>NHL (October 2024)</h3>
                         <img src="/static/assets/locked.png" style="width: 100%; height:400px;"></a>
                 </div>
                 <div class="col-md-4 d-flex text-center align-items-center justify-content-center">
-                    <a href="/sports/html/nfl/nfl_pools">
-                        <h3>NFL (September 2024)</h3>
+                    <a href="/sports/html/nba/nba_pools">
+                        <h3>NBA (October 2024)</h3>
                         <img src="/static/assets/locked.png" style="width: 100%; height:400px;"></a>
                 </div>
                 <div class="col-md-4 d-flex text-center align-items-center justify-content-center">
