--- a/banano-sports-pools/templates/roadmap.html
+++ b/banano-sports-pools/templates/roadmap.html
@@ -72,9 +72,16 @@
         </div>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-12"></div>
                     <h1>Release Notes</h1>
                     <hr style="color:lightgray; border-width: 3px;">
+                    <h4>09/07/2024, v3.0</h4>
+                    <ul>
+                        <li>Added 2024/25 NFL</li>
+                        <li>Upgraded backend libraries & databases</li>
+                    </ul>
+                </div>
+                <div class="col-md-12">
                     <h4>04/20/2024, v2.6</h4>
                     <ul>
                         <li>Added NHL Playoffs</li>
